@@ -2,11 +2,12 @@ package com.bang_ggood.checklist.service;
 
 import com.bang_ggood.checklist.domain.Checklist;
 import com.bang_ggood.checklist.dto.request.ChecklistRequest;
+import com.bang_ggood.checklist.dto.request.ChecklistRequestV1;
 import com.bang_ggood.checklist.dto.response.ChecklistPreviewResponse;
 import com.bang_ggood.checklist.dto.response.ChecklistsPreviewResponse;
 import com.bang_ggood.checklist.dto.response.SelectedChecklistResponse;
+import com.bang_ggood.checklist.dto.response.SelectedChecklistResponseV1;
 import com.bang_ggood.like.service.ChecklistLikeService;
-import com.bang_ggood.checklist.dto.response.SelectedChecklistResponse;
 import com.bang_ggood.maintenance.domain.ChecklistMaintenance;
 import com.bang_ggood.maintenance.domain.MaintenanceItem;
 import com.bang_ggood.maintenance.service.ChecklistMaintenanceService;
@@ -14,22 +15,28 @@ import com.bang_ggood.option.domain.ChecklistOption;
 import com.bang_ggood.option.dto.response.SelectedOptionResponse;
 import com.bang_ggood.option.service.ChecklistOptionService;
 import com.bang_ggood.question.domain.Answer;
-import com.bang_ggood.question.domain.Category;
+import com.bang_ggood.question.domain.CategoryEntity;
 import com.bang_ggood.question.domain.ChecklistQuestion;
 import com.bang_ggood.question.domain.Question;
 import com.bang_ggood.question.dto.response.SelectedCategoryQuestionsResponse;
 import com.bang_ggood.question.dto.response.SelectedQuestionResponse;
 import com.bang_ggood.question.service.ChecklistQuestionService;
+import com.bang_ggood.question.service.QuestionService;
 import com.bang_ggood.room.domain.Room;
 import com.bang_ggood.room.dto.response.SelectedRoomResponse;
 import com.bang_ggood.room.service.RoomService;
+import com.bang_ggood.station.domain.ChecklistStation;
+import com.bang_ggood.station.dto.request.ChecklistStationRequest;
+import com.bang_ggood.station.dto.response.SubwayStationResponse;
+import com.bang_ggood.station.dto.response.SubwayStationResponses;
+import com.bang_ggood.station.service.ChecklistStationService;
 import com.bang_ggood.user.domain.User;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class ChecklistManageService {
 
@@ -39,19 +46,8 @@ public class ChecklistManageService {
     private final ChecklistQuestionService checklistQuestionService;
     private final ChecklistMaintenanceService checklistMaintenanceService;
     private final ChecklistLikeService checklistLikeService;
-
-    public ChecklistManageService(RoomService roomService, ChecklistService checklistService,
-                                  ChecklistOptionService checklistOptionService,
-                                  ChecklistQuestionService checklistQuestionService,
-                                  ChecklistMaintenanceService checklistMaintenanceService,
-                                  ChecklistLikeService checklistLikeService) {
-        this.roomService = roomService;
-        this.checklistService = checklistService;
-        this.checklistOptionService = checklistOptionService;
-        this.checklistQuestionService = checklistQuestionService;
-        this.checklistMaintenanceService = checklistMaintenanceService;
-        this.checklistLikeService = checklistLikeService;
-    }
+    private final ChecklistStationService checklistStationService;
+    private final QuestionService questionService;
 
     @Transactional
     public Long createChecklist(User user, ChecklistRequest checklistRequest) {
@@ -60,6 +56,19 @@ public class ChecklistManageService {
         createChecklistOptions(checklistRequest, checklist);
         createChecklistQuestions(checklistRequest, checklist);
         createChecklistMaintenances(checklistRequest, checklist);
+        return checklist.getId();
+    }
+
+    @Transactional
+    public Long createChecklistV1(User user, ChecklistRequestV1 checklistRequestV1) {
+        ChecklistRequest checklistRequest = checklistRequestV1.toChecklistRequest();
+
+        Room room = roomService.createRoom(checklistRequest.toRoomEntity());
+        Checklist checklist = checklistService.createChecklist(checklistRequest.toChecklistEntity(room, user));
+        createChecklistOptions(checklistRequest, checklist);
+        createChecklistQuestions(checklistRequest, checklist);
+        createChecklistMaintenances(checklistRequest, checklist);
+        createChecklistStation(checklistRequestV1, checklist);
         return checklist.getId();
     }
 
@@ -75,6 +84,7 @@ public class ChecklistManageService {
                 .map(question -> new ChecklistQuestion(
                         checklist,
                         Question.fromId(question.questionId()),
+                        questionService.readQuestion(question.questionId()),
                         Answer.from(question.answer())))
                 .toList();
         checklistQuestionService.createQuestions(checklistQuestions);
@@ -89,6 +99,11 @@ public class ChecklistManageService {
         checklistMaintenanceService.createMaintenances(checklistMaintenances);
     }
 
+    private void createChecklistStation(ChecklistRequestV1 checklistRequestV1, Checklist checklist) {
+        ChecklistStationRequest geolocation = checklistRequestV1.geolocation();
+        checklistStationService.createChecklistStations(checklist, geolocation.latitude(), geolocation.latitude());
+    }
+
     @Transactional(readOnly = true)
     public SelectedChecklistResponse readChecklist(User user, Long checklistId) {
         Checklist checklist = checklistService.readChecklist(user, checklistId);
@@ -100,6 +115,20 @@ public class ChecklistManageService {
         boolean isLiked = checklistLikeService.isLikedChecklist(checklist);
 
         return SelectedChecklistResponse.of(room, options, questions, isLiked);
+    }
+
+    @Transactional(readOnly = true)
+    public SelectedChecklistResponseV1 readChecklistV1(User user, Long checklistId) {
+        Checklist checklist = checklistService.readChecklist(user, checklistId);
+
+        List<Integer> maintenances = readChecklistMaintenances(checklist);
+        List<SelectedOptionResponse> options = readChecklistOptions(checklist);
+        List<SelectedCategoryQuestionsResponse> questions = readChecklistQuestions(checklist);
+        SelectedRoomResponse room = SelectedRoomResponse.of(checklist, maintenances);
+        boolean isLiked = checklistLikeService.isLikedChecklist(checklist);
+        SubwayStationResponses stations = readChecklistStations(checklist);
+
+        return SelectedChecklistResponseV1.of(room, options, questions, isLiked, stations);
     }
 
     private List<Integer> readChecklistMaintenances(Checklist checklist) {
@@ -119,19 +148,29 @@ public class ChecklistManageService {
     private List<SelectedCategoryQuestionsResponse> readChecklistQuestions(Checklist checklist) {
         List<ChecklistQuestion> checklistQuestions = checklistQuestionService.readChecklistQuestions(checklist);
 
-        return Arrays.stream(Category.values())
+        return questionService.findAllCategories().stream()
                 .map(category -> categorizeChecklistQuestions(category, checklistQuestions))
+                .filter(selectedCategoryQuestionsResponse -> !selectedCategoryQuestionsResponse.questions().isEmpty())
                 .toList();
     }
 
-    private SelectedCategoryQuestionsResponse categorizeChecklistQuestions(Category category,
+    private SelectedCategoryQuestionsResponse categorizeChecklistQuestions(CategoryEntity category,
                                                                            List<ChecklistQuestion> checklistQuestions) {
-        List<SelectedQuestionResponse> selectedQuestionResponse = Question.filter(category, checklistQuestions)
+        List<SelectedQuestionResponse> selectedQuestionResponse = checklistQuestionService.categorizeChecklistQuestions(category, checklistQuestions)
                 .stream()
-                .map(SelectedQuestionResponse::new)
+                .map(checklistQuestion -> new SelectedQuestionResponse(checklistQuestion, questionService.readHighlights(checklistQuestion.getQuestionId())))
                 .toList();
 
         return SelectedCategoryQuestionsResponse.of(category, selectedQuestionResponse);
+    }
+
+    private SubwayStationResponses readChecklistStations(Checklist checklist) {
+        List<ChecklistStation> checklistStations = checklistStationService.readChecklistStationsByChecklist(checklist);
+        List<SubwayStationResponse> stations = checklistStations.stream()
+                .map(SubwayStationResponse::from)
+                .toList();
+
+        return SubwayStationResponses.from(stations);
     }
 
     @Transactional(readOnly = true)
@@ -155,7 +194,7 @@ public class ChecklistManageService {
         checklistOptionService.deleteAllByChecklistId(checklist.getId());
         checklistMaintenanceService.deleteAllByChecklistId(checklist.getId());
         checklistService.deleteById(id);
-        roomService.deleteById(checklist.getRoom().getId());
+        roomService.deleteById(checklist.getRoomId());
     }
 
     @Transactional(readOnly = true)
@@ -198,6 +237,7 @@ public class ChecklistManageService {
                 .map(question -> new ChecklistQuestion(
                         checklist,
                         Question.fromId(question.questionId()),
+                        questionService.readQuestion(question.questionId()),
                         Answer.from(question.answer())))
                 .toList();
         checklistQuestionService.updateQuestions(questions, updateQuestions);
@@ -209,7 +249,7 @@ public class ChecklistManageService {
                 checklistRequest.room().includedMaintenances().stream()
                         .map(maintenanceId -> new ChecklistMaintenance(checklist,
                                 MaintenanceItem.fromId(maintenanceId)))
-                        .collect(Collectors.toList());
+                        .toList();
         checklistMaintenanceService.updateMaintenances(checklist.getId(), checklistMaintenances);
     }
 }
